Commit Webpage Updates

--- a/index.html
+++ b/index.html
@@ -3,8 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JasperLabs</title>
+    <meta name="description" content="JasperLabs - AI Lab + Product Studio. Incubating ideas, growing talent, driving impact. Where global research meets Indian talent and experiments become products." />
+    <meta name="keywords" content="AI Lab, Product Studio, Research, Innovation, Technology, Indian Talent, B2C Products" />
+    <meta name="author" content="JasperLabs" />
+    <title>JasperLabs - AI Lab + Product Studio</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+      * {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+      /* Smooth reveal animations */
+      @keyframes fadeInUp {
+        from {
+          opacity: 0;
+          transform: translateY(30px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+      /* Parallax effect for images */
+      img {
+        transition: transform 0.3s ease-out;
+      }
+      img:hover {
+        transform: scale(1.02);
+      }
+    </style>
   <script type="importmap">
 {
   "imports": {
