--- a/index.html
+++ b/index.html
@@ -1,40 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Jasper Labs - AI Lab + Product Studio. Incubating ideas, growing talent, driving impact. Where global research meets Indian talent and experiments become products." />
-    <meta name="keywords" content="AI Lab, Product Studio, Research, Innovation, Technology, Indian Talent, B2C Products" />
-    <meta name="author" content="Jasper Labs" />
-    <title>Jasper Labs - AI Lab + Product Studio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      html {
-        scroll-behavior: smooth;
-      }
-      * {
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-      }
-      /* Smooth reveal animations */
-      @keyframes fadeInUp {
-        from {
-          opacity: 0;
-          transform: translateY(30px);
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Jasper Labs - AI Lab + Product Studio. Incubating ideas, growing talent, driving impact. Where global research meets Indian talent and experiments become products." />
+  <meta name="keywords"
+    content="AI Lab, Product Studio, Research, Innovation, Technology, Indian Talent, B2C Products" />
+  <meta name="author" content="Jasper Labs" />
+  <title>Jasper Labs - AI Lab + Product Studio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['DM Sans', 'sans-serif'],
+            display: ['JetBrains Mono', 'monospace'],
+          },
+          colors: {
+            jasper: {
+              50: '#fdf2f2',
+              100: '#fde6e6',
+              200: '#fbd0d0',
+              300: '#f8a9a9',
+              400: '#f27676',
+              500: '#e94545',
+              600: '#d62525',
+              700: '#b41a1a',
+              800: '#951818',
+              900: '#7c1a1a',
+              950: '#430a0a',
+            }
+          }
         }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
       }
-      /* Parallax effect for images */
-      img {
-        transition: transform 0.3s ease-out;
-      }
-      img:hover {
-        transform: scale(1.02);
-      }
-    </style>
+    }
+  </script>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+
+    body {
+      background-color: #ffffff;
+      color: #000000;
+    }
+
+    * {
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+
+    /* Custom Scrollbar */
+    ::-webkit-scrollbar {
+      width: 10px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: #ffffff;
+      border-left: 2px solid #000000;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #000000;
+      border: 2px solid #000000;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #2563EB;
+    }
+  </style>
   <script type="importmap">
 {
   "imports": {
@@ -45,9 +87,11 @@
 }
 </script>
 </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
